--- a/project/Contact.html
+++ b/project/Contact.html
@@ -27,6 +27,17 @@
             padding: 30px;
         }
     </style>
+
+    <script>
+        function TurnNavOnOff () {
+            if(document.getElementById("navlinks").style.getPropertyValue("display")=='block') {
+                document.getElementById("navlinks").style.display = "none";
+            }
+            else {
+                document.getElementById("navlinks").style.display = "block";
+            }
+        }
+    </script>
 </head>
 
 <body>
@@ -35,7 +46,9 @@
         <h2>LOCOROCO <br> VENDING <br> PROJECT</h2>
     </header>
 
-    <nav>
+    <img src="icon/nav.png" alt="nav icon" id="navicon" onclick="TurnNavOnOff();">
+
+    <nav id="navlinks">
         <a href="index.html">HOME</a> 
         <a href="AboutUs.html">ABOUT US</a> 
         <a href="LocoRocoVendingProject.html">PROJECT</a> 
