--- a/project/AboutUs.html
+++ b/project/AboutUs.html
@@ -31,6 +31,11 @@
             background-color: yellow;
         }
 
+        iframe {
+            width: 560px;
+            height: 315px;
+        }
+
         @media only screen and (max-width: 1320px) {
             main {margin: 5px;}
             .text div {margin-bottom: 80px;}
@@ -74,6 +79,10 @@
                 padding-left: 5px;
                 padding-right: 5px;
             }
+
+            iframe {
+                max-width: 100%;
+            }
         }
 
         @media only screen and (max-width: 415px) {
@@ -94,8 +103,6 @@
                 display: none;
                 text-align: center;
             }
-
-            
         }
     </style>
 
@@ -131,7 +138,7 @@
     <main>
         <div class="firstpart">
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/m6mnHINfRZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                <iframe src="https://www.youtube.com/embed/m6mnHINfRZU" title="YouTube video player" frameborder="0" wdith="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
                 
                 <h3>Project Introduction</h3>
@@ -152,7 +159,7 @@
 
         <div class="secondpart">
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/HjDcMY8S4C8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                <iframe src="https://www.youtube.com/embed/HjDcMY8S4C8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
 
                 <h3>Project Prospection</h3>
