--- a/project/AboutUs.html
+++ b/project/AboutUs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="ProjectSylesheet.css">
-    <link rel="shortcut icon" type="image/x-icon" href="icon/LOGOsmall.bmp">
+    <link rel="shortcut icon" type="image/x-icon" href="icon/favicon.ico">
 
     <style>
         .firstpart, .secondpart {
