--- a/project/AboutUs.html
+++ b/project/AboutUs.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="ProjectSylesheet.css">
-    <link rel="shortcut icon" type="image/x-icon" href="icon/favicon final.ico">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
+    
     <style>
         .firstpart, .secondpart {
             display: flex;
