--- a/project/Donate.html
+++ b/project/Donate.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="ProjectSylesheet.css">
+    <link rel="shortcut icon" type="image/x-icon" href="icon/favicon final.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
 
     <style>
         main {
@@ -67,7 +71,7 @@
 <body>
     <header>
         <img src="images/LOGO.png" width="90" alt="Logo">
-        <h2>LOCOROCO VENDING PROJECT</h2>
+        <h2>LOCOROCO <br> VENDING <br> PROJECT</h2>
     </header>
 
     <img src="icon/nav.png" alt="nav icon" id="navicon" onclick="TurnNavOnOff();">
