--- a/project/LocoRocoVendingProject.html
+++ b/project/LocoRocoVendingProject.html
@@ -12,12 +12,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
 
     <style>
+        main {
+            background-color: black;
+            margin-top: 30px;
+        }
+
         .handbook {
-            margin-left: 180px;
+            margin-left: 140px;
         }
 
         .row1, .row2, .row3, .row4, .row5 {
             display: flex;
+        }
+
+        .descriptiveimage {
+            border: 1px dashed rgb(248, 242, 44, 0.4);
+            margin-bottom: 20px;
         }
 
         .phase {
@@ -36,7 +46,7 @@
             text-align: left;
             position: relative;
             left: -50px;
-            background-color: rgb(255, 255, 120);
+            background-color: rgb(248, 242, 44, 0.95);
             padding: 20px;
             border-radius: 1em;
         }
@@ -45,10 +55,12 @@
             text-align: right;
             position: relative;
             right: -50px;
-            background-color: rgb(255, 255, 120);
+            background-color: rgb(248, 242, 44, 0.95);
             padding: 20px;
             border-radius: 1em;
         }
+
+
     </style>
 
     <script>
@@ -64,7 +76,7 @@
 </head>
 <body>
     <header>
-        <img src="images/LOGO.png" width="100" height="90" alt="Logo">
+        <img src="images/LOGO.png" width="100" height="100" alt="Logo">
         <h2>LOCOROCO <br> VENDING <br> PROJECT</h2>
     </header>
 
@@ -84,7 +96,7 @@
 
     <main>
         <div class="row1">
-            <div>
+            <div class="descriptiveimage">
                 <img src="images/phase1.JPG" width="310" height="300" alt="Phase 1"> 
             </div>
 
@@ -108,13 +120,13 @@
                 </div>
             </div>  
 
-            <div>
+            <div class="descriptiveimage">
                 <img src="images/phase2.JPG" width="310" height="300" alt="Phase 2">
             </div>
         </div>
 
         <div class="row2">
-            <div>
+            <div class="descriptiveimage">
                 <img src="images/phase3.JPG" width="310" height="270" alt="Phase 3">
             </div>
 
@@ -138,13 +150,13 @@
                 </div>
             </div>
 
-            <div>
+            <div class="descriptiveimage">
                 <img src="images/phase4.JPG" width="310" height="270" alt="Phase 4">
             </div>
         </div>
 
         <div class="row3">
-            <div>
+            <div class="descriptiveimage">
                 <img src="images/phase5.JPG" width="310" height="300" alt="Phase 5">
             </div>
 
@@ -168,13 +180,13 @@
                 </div>
             </div>
 
-            <div>
+            <div class="descriptiveimage">
                 <img src="images/phase6.JPG" width="310" height="300" alt="Phase 6">
             </div>
         </div>
 
         <div class="row4">
-            <div>
+            <div class="descriptiveimage">
                 <img src="images/phase7.JPG" width="310" height="300" alt="Phase 7">
             </div>
 
@@ -198,13 +210,13 @@
                 </div>
             </div>
 
-            <div>
+            <div class="descriptiveimage">
                 <img src="images/phase8.JPG" width="310" height="300" alt="Phase 8">
             </div>
         </div>
 
         <div class="row5">
-            <div>
+            <div class="descriptiveimage">
                 <img src="images/phase9.JPG" width="310" height="300" alt="Phase 9">
             </div>
 
@@ -224,7 +236,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="descriptiveimage">
                 <img src="images/phase10.JPG" width="310" height="300" alt="Phase 10">
             </div>
         </div>
