--- a/project/LocoRocoVendingProject.html
+++ b/project/LocoRocoVendingProject.html
@@ -28,6 +28,9 @@
         .descriptiveimage {
             border: 1px dashed rgb(248, 242, 44, 0.4);
             margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .phase {
@@ -60,6 +63,21 @@
             border-radius: 1em;
         }
 
+        @media only screen and (max-width: 1320px) {
+            main {
+                margin-left: 5px;
+                margin-right: 5px;
+            }
+        }
+
+        @media only screen and (max-width: 1050px) {
+            .phase{padding: 10px;}
+            .down{margin: 5px;}
+            .descriptiveimage {
+                width: 250px;
+            }
+        }
+
 
     </style>
 
@@ -74,6 +92,7 @@
         }
     </script>
 </head>
+
 <body>
     <header>
         <img src="images/LOGO.png" width="100" height="100" alt="Logo">
@@ -107,7 +126,7 @@
                 </div>
 
                 <div class="down">
-                    <img src="icon/down.png" alt="Down Icon" height="20">
+                    <img src="icon/downyellow-01.png" alt="Down Icon" height="20">
                 </div>
 
                 <div class="second">
@@ -116,7 +135,7 @@
                 </div>
 
                 <div class="down">
-                    <img src="icon/down.png" alt="Down Icon" height="20">
+                    <img src="icon/downyellow-01.png" alt="Down Icon" height="20">
                 </div>
             </div>  
 
@@ -137,7 +156,7 @@
                 </div>
 
                 <div class="down">
-                    <img src="icon/down.png" alt="Down Icon" height="20">
+                    <img src="icon/downyellow-01.png" alt="Down Icon" height="20">
                 </div>
 
                 <div class="second">
@@ -146,7 +165,7 @@
                 </div>
 
                 <div class="down">
-                    <img src="icon/down.png" alt="Down Icon" height="20">
+                    <img src="icon/downyellow-01.png" alt="Down Icon" height="20">
                 </div>
             </div>
 
@@ -167,7 +186,7 @@
                 </div>
 
                 <div class="down">
-                    <img src="icon/down.png" alt="Down Icon" height="20">
+                    <img src="icon/downyellow-01.png" alt="Down Icon" height="20">
                 </div>
 
                 <div class="second">
@@ -176,7 +195,7 @@
                 </div>
 
                 <div class="down">
-                    <img src="icon/down.png" alt="Down Icon" height="20">
+                    <img src="icon/downyellow-01.png" alt="Down Icon" height="20">
                 </div>
             </div>
 
@@ -197,7 +216,7 @@
                 </div>
 
                 <div class="down">
-                    <img src="icon/down.png" alt="Down Icon" height="20">
+                    <img src="icon/downyellow-01.png" alt="Down Icon" height="20">
                 </div>
 
                 <div class="second">
@@ -206,7 +225,7 @@
                 </div>
 
                 <div class="down">
-                    <img src="icon/down.png" alt="Down Icon" height="20">
+                    <img src="icon/downyellow-01.png" alt="Down Icon" height="20">
                 </div>
             </div>
 
@@ -227,12 +246,12 @@
                 </div>
 
                 <div class="down">
-                    <img src="icon/down.png" alt="Down Icon" height="20">
+                    <img src="icon/downyellow-01.png" alt="Down Icon" height="20">
                 </div>
 
                 <div class="second">
                     <strong>PHASE 10: SYSTEM MAINTENANCE</strong> <br>
-                    This is the continuing final phase of the project. In this phase, vendors decide whether they want to join the maintenance of this project after a free trial of 2 months and make their contribution to the fund every month. Vendors would create mutual-aid network by helping and communicating with each other on a regular basis.
+                    This is the continuing final phase of the project. In this phase, vendors make contribution and maintain the project. A mutual-aid network can be established by helping and communicating with each other on a regular basis.
                 </div>
             </div>
 
