--- a/project/AboutUs.html
+++ b/project/AboutUs.html
@@ -75,6 +75,12 @@
             }
         }
 
+        @media only screen and (max-width: 755px) {
+            h1 {
+                margin-left: 20px;
+            }
+        }
+
         @media only screen and (max-width: 700px) {
             .text {
                 margin-left: 5px;
