--- a/project/Donate.html
+++ b/project/Donate.html
@@ -54,6 +54,82 @@
             justify-content: space-around;
             margin-left: 450px;
             margin-right: 450px;
+            margin-bottom: 60px;
+        }
+
+        @media only screen and (max-width: 1320px) {
+            main {
+                margin-left: 10px;
+                margin-right: 10px;
+            }
+
+            .buttom {
+            margin-left: 300px;
+            margin-right: 300px; 
+            }
+        }
+
+        @media only screen and (max-width: 1050px) {
+            .left, .right {
+                padding-top: 0px;
+            }
+
+            .left {
+                padding-right: 20px;
+            }
+
+            .right {
+                padding-left: 20px;
+            }
+
+            .image {
+                width: 100%;
+                margin-left: 5px;
+                margin-right: 5px;
+                margin-top: 30px;
+            }
+
+            .diagram {
+                width: 100%;
+            }
+
+            .buttom {
+            margin-left: 200px;
+            margin-right: 200px; 
+            }
+        }
+
+        @media only screen and (max-width: 850px) {
+            main {
+                display: block;
+                margin-left: 40px;
+                margin-right: 40px;
+                margin-top: 0px;
+            }
+
+            .left {
+                padding-right: 0px;
+            }
+
+            .right {
+                padding-left: 0px;
+            }
+
+            .buttom {
+            margin-left: 150px;
+            margin-right: 150px; 
+            }
+        }
+
+        @media only screen and (max-width: 755px) {
+            main{
+                margin-left: 20px;
+                margin-right: 20px;
+            }
+
+            h1 {
+                margin-left: 20px;
+            }
         }
     </style>
 
@@ -98,7 +174,7 @@
         </div>
 
         <div class="image">
-            <img src="images/Body.jpg" width="400" alt="Fear and Stress of Street Vendors">
+            <img src="images/Body.jpg" width="400" alt="Fear and Stress of Street Vendors" class="diagram">
         </div>
 
         <div class="right">
