--- a/project/LocoRocoVendingProject.html
+++ b/project/LocoRocoVendingProject.html
@@ -62,6 +62,10 @@
             border-radius: 1em;
         }
 
+        footer {
+            margin-top: 50px;
+        }
+
         @media only screen and (max-width: 1320px) {
             main {
                 margin-left: 5px;
@@ -357,5 +361,9 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        &#169;vendorpower2021
+    </footer>
 </body>
 </html>
