--- a/project/LocoRocoVendingProject.html
+++ b/project/LocoRocoVendingProject.html
@@ -210,7 +210,7 @@
 
     <h1>Project Overview</h1>
 
-    <button class="handbook" type="button" onclick="window.location.href='https://dcfd6443-8984-40d6-8a6b-e2b32f1ffcfd.filesusr.com/ugd/1ea71e_6fb6d8ef5fe34f858571c14a225f97cc.pdf';">DOWNLOAD HANDBOOK</button></a>
+    <button class="handbook" type="button" onclick="window.location.href='https://dcfd6443-8984-40d6-8a6b-e2b32f1ffcfd.filesusr.com/ugd/1ea71e_6fb6d8ef5fe34f858571c14a225f97cc.pdf';">DOWNLOAD HANDBOOK</button>
 
     <main>
         <div class="row1">
