--- a/project/Donate.html
+++ b/project/Donate.html
@@ -162,7 +162,7 @@
 </head>
 <body>
     <header>
-        <img src="images/LOGO.png" width="90" alt="Logo">
+        <img src="images/LOGOsmall.png" width="90" alt="Logo">
         <h2>LOCOROCO <br> VENDING <br> PROJECT</h2>
     </header>
 
