--- a/project/index.html
+++ b/project/index.html
@@ -251,20 +251,20 @@
 
     <script>
          function TurnNavOnOff () {
-                if(document.getElementById("navlinks").style.getPropertyValue("display")=='block') {
-                    document.getElementById("navlinks").style.display = "none";
-                }
-                else {
-                    document.getElementById("navlinks").style.display = "block";
-                }
+            if(document.getElementById("navlinks").style.getPropertyValue("display")=='block') {
+                document.getElementById("navlinks").style.display = "none";
             }
+            else {
+                document.getElementById("navlinks").style.display = "block";
+            }
+        }
     </script>
 </head>
 
 <body>
     <header>
         <div class="smallheader">
-            <img class="logo" src="images/LOGO.png" width="90" alt="Logo">
+            <img class="logo" src="images/LOGOsmall.png" width="90" alt="Logo">
             <h2>LOCOROCO <br> VENDING <br> PROJECT</h2>
         </div>
 
