--- a/project/Contact.html
+++ b/project/Contact.html
@@ -126,7 +126,7 @@
 
 <body>
     <header>
-        <img src="images/LOGO.png" width="90" alt="Logo">
+        <img src="images/LOGOsmall.png" width="90" alt="Logo">
         <h2>LOCOROCO <br> VENDING <br> PROJECT</h2>
     </header>
 
