--- a/project/LocoRocoVendingProject.html
+++ b/project/LocoRocoVendingProject.html
@@ -194,7 +194,7 @@
 
 <body>
     <header>
-        <img src="images/LOGO.png" width="100" height="100" alt="Logo">
+        <img src="images/LOGOsmall.png" width="90" alt="Logo">
         <h2>LOCOROCO <br> VENDING <br> PROJECT</h2>
     </header>
 
